# zakachain-contract

./: Anchor.toml  README.md  new_program_id.json  package-lock.json  package.json
app/: addMustahik.ts  checkState.ts  collectZakat.ts  findStateAccount.ts  interact.ts  manualWithdraw.ts  withdrawManual.ts
programs/zakachain/: Cargo.toml
programs/zakachain-core/: Cargo.toml
programs/zakachain-core/src/: lib.rs
programs/zakachain-distribution/: Cargo.toml
programs/zakachain-distribution/src/: lib.rs
programs/zakachain-token/: Cargo.toml
programs/zakachain-token/src/: lib.rs
programs/zakachain/src/: lib.rs
tests/: zakachain.ts
