[package]
name = "zakachain-distribution"
version = "0.1.0"
description = "Distribution program for ZakaChain - handles mustahik management and distributions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zakachain_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.0"
zakachain-core = { path = "../zakachain-core", features = ["cpi"] } 